--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "socket.io-client": "^4.1.3",
     "vue": "^2.2.33",
     "vue-router": "^3.5.3",
